--- a/html/cabeceraBienHecha.html
+++ b/html/cabeceraBienHecha.html
@@ -94,16 +94,20 @@ form.buscar button{
                                 <h4 style="margin:auto">Register</h4>
                                 </div>
                                 <div class="row" > 
-                                <form  name="login" action="login" method="post" style="margin:auto;max-width:150px">
+                                <div class="col-6">
+                                <form  name="login" action="login" method="post" style="margin:auto">
                                   <input type="text" name="username" class="username form-control" placeholder="Username"/>
                                   <input type="password" name="password" class="password form-control" placeholder="password"/>
                                  <button type="button" class="btn btn-primary btn-sm" style="background-color:#117A65; color:white; margin:auto;">Login</button>
                                   </form>
-                                  <form  name="registro" action="registro" method="post" style="margin:auto;max-width:150px">
+                                  </div>
+                                  <div class="col-6">
+                                  <form  name="registro" action="registro" method="post" style="margin:auto">
                                    <input type="text" name="username" class="username form-control" placeholder="Username"/>
                                   <input type="password" name="password" class="password form-control" placeholder="password"/>
                                  <button type="button" class="btn btn-primary btn-sm" style="background-color:#117A65; color:white; margin:auto;">Register</button>
                                 </form>
+                                </div>
                                 </div>
                                 
             			</div>
