--- a/gueorgui/editarJugadorBonito.html
+++ b/gueorgui/editarJugadorBonito.html
@@ -16,7 +16,7 @@
 <!--!!!!!-->	<div class="form-group">
 	            <label for="solicitudJugadorNombre">Nombre:</label>
 <!--!!!!!-->	<input type="hidden" id="solicitudJugadorNombre" name="solicitudJugadorNombre" value="<%=jugador.getId()%>" readonly></input>
-	            <input type="text" id="solicitudJugadorName" name="solicitudJugadorN" value="<%=jugador.getNombre()%>" readonly></input>
+	            <input type="text" value="<%=jugador.getNombre()%>" readonly></input>
 <!--!!!!!-->	</div> <!--!!!!! Se mete cada pareja label-input en estos div-->
 	            <div class="form-group">
 	            <label for="solicitudJugadorCampo">Campo a modificar:</label>
