--- a/gueorgui/editarEquipoBonito.html
+++ b/gueorgui/editarEquipoBonito.html
@@ -21,13 +21,11 @@
 	            <div class="form-group">
 	            <label for="solicitudEquipoCampo">Campo a modificar:</label>
 	            <select id="solicitudEquipoCampo" name="solicitudEquipoCampo">
-	            	<option value="nacido">Nacido</option>
-	            	<option value="rojas">Rojas</option>
-	            	<option value="amarillas">Amarillas</option>
-	            	<option value="pjugados">Pjugados</option>
-	            	<option value="ptitular">Ptitular</option>
-	                <option value="goles">Goles</option>
-	                <option value="equipo">Equipo</option>
+				<option value="precioent">Precio entradas</option>
+				<option value="estadio">Estadio</option>
+				<option value="capacidad">Capacidad</option>
+				<option value="tipocesped">Tipo cesped</option>
+				<option value="grupo">Grupo</option>
 	            </select>
 	            </div>
 	            <div class="form-group">
